# TibiaJobManager

./: CMakeLists.txt  Main.qml  README.md  app.rc  main.cpp  timermodel.cpp  timermodel.h
data/images/: dad9c5eb-c4fd-4dfb-9442-adab0e3ff91c.jfif
qml/: ContentArea.qml  Footer.qml  TibiaScrollBar.qml  TimerRow.qml  TopBar.qml
source/: timermodel.cpp  timermodel.h
